[tool.poetry]
name = "mutual-credit"
version = "0.1.0"
description = ""
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.3"
param = "^2.0.2"
ipython = "^8.21.0"
pytest = "^8.0.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
